<resources>
    <string name="app_name">MADTodo</string>
    <string name="developer">Developed By: S chand</string>
    <string name="title_activity_login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_signup">Sign Up</string>

    <string name="title_activity_navactivity">navactivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="friends">Friends</string>
    <string name="family">Family</string>
    <string name="office">Office</string>
    <string name="home">Home</string>
    <string name="high">high</string>
    <string name="medium">medium</string>
    <string name="low">low</string>
    <string name="all">All</string>

</resources>
