<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="ui.AddEditTodoActivity">

    <com.google.android.material.textfield.TextInputLayout

        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout

        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Description">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout

        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Due Date">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:id="@+id/edit_due_date"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Category"
        style="Te"
        android:textColor="@color/colorBlack"
        android:textSize="16sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioGroup
            android:id="@+id/edit_category"
            android:layout_width="match_parent"
            android:checkedButton="@id/edit_category_home"
            android:orientation="horizontal"
            android:layout_height="wrap_content">



            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/edit_category_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/home"
                android:textColorHint="@color/colorBlack"></com.google.android.material.radiobutton.MaterialRadioButton>

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/edit_category_office"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/office"
                android:textColorHint="@color/colorBlack"></com.google.android.material.radiobutton.MaterialRadioButton>

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/edit_category_family"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/family"
                android:textColorHint="@color/colorBlack"></com.google.android.material.radiobutton.MaterialRadioButton>

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/edit_category_friends"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/friends"
                android:textColorHint="@color/colorBlack"></com.google.android.material.radiobutton.MaterialRadioButton>


        </RadioGroup>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Priority"
        android:textAppearance="@android:style/TextAppearance.Medium" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <RadioGroup
        android:id="@+id/edit_priority"
        android:layout_width="match_parent"
        android:checkedButton="@id/edit_priority_high"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/edit_priority_high"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/high"
                android:textAllCaps="true"
                android:textColor="@color/colorRed"
                android:textColorHint="@color/colorBlack"></com.google.android.material.radiobutton.MaterialRadioButton>

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/edit_priority_medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="MEDIUM"
                android:textColor="@color/colorAmber"
                android:textAllCaps="true"
                android:textColorHint="@color/colorBlack"></com.google.android.material.radiobutton.MaterialRadioButton>

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/edit_priority_low"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/low"
                android:textAllCaps="true"
                android:textColor="@color/material_deep_teal_50"
                android:textColorHint="@color/colorBlack"></com.google.android.material.radiobutton.MaterialRadioButton>


    </RadioGroup>
    </LinearLayout>






</LinearLayout>